# 6nf-recipes

./: .gitignore  LICENSE  README.md  create_database.sh  pyproject.toml
bash/: bootstrap_db.sh
bootstrap/: boostrap_db.sh  create_table_defs.txt
bootstrap/tables/: default_masses.sql  ingredient_list.sql  recipe_citation_author_names.sql  (+5 more)
data/: citation_access_dates.csv  default_masses.csv  ingredient_lists.csv  ingredient_ratio_lists.csv  ingredients.csv  recipe_access_date_ids.csv  recipe_citation_accessed.csv  recipe_citation_accessed_dates.csv  recipe_citation_authors.csv  recipe_citation_date_values.csv  recipe_citation_dates.csv  recipe_citation_titles.csv  recipe_citation_urls.csv  recipe_default_masses.csv  recipe_list.csv  recipe_mass_ids.csv  recipes.csv
dbml/: schema.dbml  schema.dbml.old
metadata/: columns.csv  julog_model.jl  run_model.jl  table_id-column_id.csv  tables.csv
model/: README.md  julog_model.jl  run_julog_model.jl
observable/: 2023-02-19_bakers-percentage-calculator.tgz
python/: csv-to-sqlite.py
sql/: schema.sql
src/: julog_model.jl
tables/: authors.sql  bakers_percentages.sql  citation_access_dates.sql  citation_dates.sql  citation_titles.sql  citation_urls.sql  ingredient_ratio_lists.sql  ingredients.sql  masses.sql  recipe_access_date_ids.sql  recipe_author_ids.sql  recipe_citation_accessed.sql  recipe_citation_accessed_dates.sql  recipe_citation_authors.sql  recipe_citation_date_ids.sql  recipe_citation_dates.sql  recipe_citation_titles.sql  recipe_list.sql  recipe_mass_ids.sql  recipes.sql
views/: citations.sql
(+10 files in other folders)
