[tool.poetry]
name = "bakers-percentage-recipes"
version = "0.0.1"
description = "Script to transform CSV datasets into a sixth-normal form (6NF) SQLite representation."
authors = ["jason a. grafft <j@grafft.co>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
